[package]
name = "polkadot-node-core-proposer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
wasm-timer = "0.2.4"
